<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/dead_icon"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/top_app_bar"
        app:navigationIcon="@drawable/menu"
        app:title="@string/page_title"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/slider_desc"
        android:value="20.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintBottom_toTopOf="@id/floating_action_button"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/wifi"
        style="@style/Theme.Design.WiFi"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:checked="true"
        android:paddingStart="15dp"
        android:text="@string/wi_fi"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/outlinedButton"
        style="@style/Theme.Design.OutLinerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="25dp"
        android:text="@string/other"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>